Minor changes to submission PA1

--- a/PA1_template.html
+++ b/PA1_template.html
@@ -345,7 +345,7 @@ xyplot(Mean ~ Interval, MeanByInterval,type=&quot;l&quot;, main=&quot;Average nu
 
 <p><em>2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.</em></p>
 
-<p>I have decided to use the mean for the relevant five minute interval. </p>
+<p>My strategy for imputing missing number of steps data is to use the mean number of steps taken for the relevant five minute interval. </p>
 
 <p><em>3. Create a new dataset that is equal to the original dataset but with the missing data filled in.</em></p>
 
